--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
   "bugs": {
     "url": "https://github.com/figure-io/polymer-matrix-diagram/issues"
   },
-  "dependencies": {
-    "next-tick": "^0.2.2",
-    "readable-stream": "^1.0.33"
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^7.0.0",
@@ -53,8 +50,9 @@
     "jshint-stylish": "^1.0.0",
     "mocha": "1.x.x",
     "vulcanize": "^0.7.7",
-    "web-component-tester": "^2.0.5",
-    "web-component-tester-istanbul": "^0.7.0"
+    "wct-local": "^1.2.0",
+    "wct-sauce": "^1.2.0",
+    "web-component-tester": "^2.2.1"
   },
   "licenses": [
     {
