--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   "bugs": {
     "url": "https://github.com/figure-io/polymer-matrix-diagram/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "matrix-diagram-spec": "0.0.2"
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^7.0.0",
@@ -49,7 +51,7 @@
     "jshint": "2.x.x",
     "jshint-stylish": "^1.0.0",
     "mocha": "1.x.x",
-    "vulcanize": "^0.7.7",
+    "vulcanize": "^0.7.9",
     "wct-local": "^1.2.0",
     "wct-sauce": "^1.2.0",
     "web-component-tester": "^2.2.1"
